--- a/components/plasmic/casais/PlasmicDesktop5.module.css
+++ b/components/plasmic/casais/PlasmicDesktop5.module.css
@@ -16,7 +16,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  background: var(--token-PHluQy5DcTDt);
+  background: var(--token-d1wM30iB6qjM);
   padding-top: 42px;
   min-width: 0;
   min-height: 0;
