--- a/components/plasmic/casais/PlasmicHomepage.module.css
+++ b/components/plasmic/casais/PlasmicHomepage.module.css
@@ -55,6 +55,30 @@
     display: flex;
   }
 }
+.desktop1:global(.__wab_instance) {
+  max-width: 100%;
+  width: 100%;
+  height: 100vh;
+  grid-column-start: 1 !important;
+  grid-column-end: -1 !important;
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .desktop1:global(.__wab_instance) {
+    display: none;
+  }
+}
+.desktop2:global(.__wab_instance) {
+  max-width: 100%;
+  width: 100%;
+  height: 100vh;
+  grid-column-start: 1 !important;
+  grid-column-end: -1 !important;
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .desktop2:global(.__wab_instance) {
+    display: none;
+  }
+}
 .desktop6:global(.__wab_instance) {
   max-width: 100%;
   width: 100%;
@@ -67,34 +91,11 @@
     display: flex;
   }
 }
-.desktop1:global(.__wab_instance) {
-  max-width: 100%;
-  width: 100%;
-  height: 800px;
-  grid-column-start: 1 !important;
-  grid-column-end: -1 !important;
-}
-@media (min-width: 0px) and (max-width: 768px) {
-  .desktop1:global(.__wab_instance) {
-    display: none;
-  }
-}
-.desktop2:global(.__wab_instance) {
-  max-width: 100%;
-  width: 100%;
-  height: 800px;
-  grid-column-start: 1 !important;
-  grid-column-end: -1 !important;
-}
-@media (min-width: 0px) and (max-width: 768px) {
-  .desktop2:global(.__wab_instance) {
-    display: none;
-  }
-}
 .desktop3:global(.__wab_instance) {
   max-width: 100%;
   width: 100%;
   height: auto;
+  margin-bottom: 0px;
   grid-column-start: 1 !important;
   grid-column-end: -1 !important;
 }
