--- a/components/plasmic/casais/PlasmicMobile2.module.css
+++ b/components/plasmic/casais/PlasmicMobile2.module.css
@@ -7,6 +7,7 @@
   justify-content: flex-start;
   align-items: center;
   background: var(--token-PHluQy5DcTDt);
+  overflow: hidden;
   min-width: 0;
 }
 .svg__ax3An {
