--- a/components/plasmic/casais/PlasmicHomepage.module.css
+++ b/components/plasmic/casais/PlasmicHomepage.module.css
@@ -114,5 +114,28 @@
 @media (max-width: 1100px) {
   .desktop5:global(.__wab_instance) {
     height: auto;
+    display: flex;
+  }
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .desktop5:global(.__wab_instance) {
+    display: none;
+  }
+}
+.mobilePreletores:global(.__wab_instance) {
+  max-width: 100%;
+  width: 100%;
+  grid-column-start: 1 !important;
+  grid-column-end: -1 !important;
+  display: none;
+}
+@media (max-width: 1100px) {
+  .mobilePreletores:global(.__wab_instance) {
+    display: none;
+  }
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .mobilePreletores:global(.__wab_instance) {
+    display: flex;
   }
 }
