--- a/components/plasmic/casais/PlasmicInscricao.module.css
+++ b/components/plasmic/casais/PlasmicInscricao.module.css
@@ -67,8 +67,7 @@
 }
 @media (min-width: 0px) and (max-width: 768px) {
   .freeBox___0FfHu {
-    padding-left: 8px;
-    padding-right: 8px;
+    padding: 0px;
   }
 }
 .freeBox__kTyP {
@@ -331,6 +330,12 @@
   > img {
   margin-top: 8px;
 }
+@media (min-width: 0px) and (max-width: 768px) {
+  .freeBox__wSjot {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
 .text__eorOd {
   position: relative;
   width: 100%;
@@ -361,12 +366,33 @@
   padding-top: 0px;
   padding-bottom: 0px;
 }
-.separator:global(.__wab_instance) {
+.freeBox___8PHs {
+  display: flex;
+  flex-direction: column;
   position: relative;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  justify-content: flex-start;
+  align-items: center;
   align-self: flex-start;
-  margin-bottom: 15px;
   margin-top: 15px;
+  margin-bottom: 15px;
+  min-width: 0;
+  padding: 0px;
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .freeBox___8PHs {
+    padding: 0px 16px;
+  }
+}
+.separator:global(.__wab_instance) {
   flex-shrink: 0;
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .separator:global(.__wab_instance) {
+    flex-shrink: 0;
+  }
 }
 .freeBox___2Gvw {
   display: flex;
@@ -395,6 +421,12 @@
   > picture
   > img {
   margin-top: 8px;
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .freeBox___2Gvw {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
 }
 .text__hfOz {
   position: relative;
