--- a/components/plasmic/casais/PlasmicFormItem.module.css
+++ b/components/plasmic/casais/PlasmicFormItem.module.css
@@ -1,18 +1,16 @@
 .root {
-  display: flex;
+  display: inline-flex;
   flex-direction: row;
-  width: 100%;
+  width: auto;
   height: auto;
   max-width: 100%;
   position: relative;
-  min-width: 0;
   padding: 0px;
 }
 .root > :global(.__wab_flex-container) {
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  min-width: 0;
   margin-left: calc(0px - 10px);
   width: calc(100% + 10px);
 }
