--- a/components/plasmic/casais/PlasmicDesktop2.module.css
+++ b/components/plasmic/casais/PlasmicDesktop2.module.css
@@ -70,8 +70,8 @@
   justify-content: center;
   min-width: 0;
   min-height: 0;
-  margin-top: calc(0px - 80px);
-  height: calc(100% + 80px);
+  margin-top: calc(0px - 30px);
+  height: calc(100% + 30px);
 }
 .freeBox___2T01M > :global(.__wab_flex-container) > *,
 .freeBox___2T01M > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
@@ -81,7 +81,7 @@
   > :global(.__wab_slot)
   > picture
   > img {
-  margin-top: 80px;
+  margin-top: 30px;
 }
 .freeBox__yW0Ua {
   display: flex;
@@ -112,8 +112,65 @@
   font-size: 50px;
   text-align: center;
 }
+.freeBox__a4DpH {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  padding: 8px;
+}
+.freeBox__a4DpH > :global(.__wab_flex-container) {
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: calc(0px - 25px);
+  height: calc(100% + 25px);
+}
+.freeBox__a4DpH > :global(.__wab_flex-container) > *,
+.freeBox__a4DpH > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
+.freeBox__a4DpH > :global(.__wab_flex-container) > picture > img,
+.freeBox__a4DpH
+  > :global(.__wab_flex-container)
+  > :global(.__wab_slot)
+  > picture
+  > img {
+  margin-top: 25px;
+}
+.img__lReX {
+  object-fit: cover;
+  max-width: 100%;
+  width: 400px;
+  height: 400px;
+  flex-shrink: 0;
+  border-radius: 100%;
+}
+.img__lReX > picture > img {
+  object-fit: cover;
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .img__lReX {
+    width: 80%;
+  }
+}
+.text__nF30P {
+  position: relative;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  font-size: 30px;
+  text-align: center;
+  min-width: 0;
+}
+@media (max-width: 1100px) {
+  .text__nF30P {
+    font-size: 20px;
+  }
+}
 .button:global(.__wab_instance) {
   max-width: 100%;
+  display: none;
 }
 .svg__d902L {
   position: relative;
@@ -139,7 +196,7 @@
   height: auto;
   max-width: 100%;
   min-width: 0;
-  padding: 80px 8px 8px;
+  padding: 30px 8px 8px;
 }
 .freeBox__lmZsw > :global(.__wab_flex-container) {
   flex-direction: column;
@@ -176,4 +233,67 @@
   height: auto;
   max-width: 100%;
   text-align: justify;
+}
+.text__oirPp {
+  position: relative;
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  text-align: left;
+  font-size: 60px;
+  font-family: "Dancing Script";
+  color: var(--token-7k42vfoby6t9);
+  line-height: 1;
+}
+.freeBox__tvr8J {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  padding: 8px;
+}
+.freeBox__tvr8J > :global(.__wab_flex-container) {
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: calc(0px - 25px);
+  height: calc(100% + 25px);
+}
+.freeBox__tvr8J > :global(.__wab_flex-container) > *,
+.freeBox__tvr8J > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
+.freeBox__tvr8J > :global(.__wab_flex-container) > picture > img,
+.freeBox__tvr8J
+  > :global(.__wab_flex-container)
+  > :global(.__wab_slot)
+  > picture
+  > img {
+  margin-top: 25px;
+}
+.img__kefj {
+  object-fit: cover;
+  max-width: 100%;
+  width: 300px;
+  height: 300px;
+  flex-shrink: 0;
+  border-radius: 100%;
+}
+.img__kefj > picture > img {
+  object-fit: cover;
+}
+.text__ozBx8 {
+  position: relative;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  font-size: 30px;
+  text-align: center;
+  min-width: 0;
+}
+@media (max-width: 1100px) {
+  .text__ozBx8 {
+    padding-top: 0px;
+    font-size: 20px;
+  }
 }
