--- a/components/plasmic/casais/PlasmicMobilePreletores.module.css
+++ b/components/plasmic/casais/PlasmicMobilePreletores.module.css
@@ -16,7 +16,6 @@
   position: relative;
   width: 100%;
   height: 100%;
-  background: var(--token-d1wM30iB6qjM);
   padding-top: 42px;
   min-width: 0;
   min-height: 0;
@@ -104,14 +103,16 @@
   flex-direction: column;
   position: relative;
   width: auto;
-  height: auto;
+  height: 100%;
   max-width: 100%;
+  min-height: 0;
   padding: 8px;
 }
 .freeBox___4Ua7C > :global(.__wab_flex-container) {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  min-height: 0;
   margin-top: calc(0px - 25px);
   height: calc(100% + 25px);
 }
