--- a/components/plasmic/casais/PlasmicHomepage.module.css
+++ b/components/plasmic/casais/PlasmicHomepage.module.css
@@ -117,7 +117,7 @@
   grid-column-end: -1 !important;
   padding: 0px;
 }
-.inscricao:global(.__wab_instance) {
+.inscricaoComp:global(.__wab_instance) {
   max-width: 100%;
   width: 100%;
   min-width: 0;
